--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -164,7 +164,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
+  top: 72px;
   left: 0;
   height: 103vh;
   width: 100%;
