--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,7 +1,7 @@
 .cart-container {
   position: relative;
   background-color: #fff;
-  margin: 60px 6%;
+  margin: 0 6%;
   padding: 16px;
   width: 325px;
   display: flex;
