--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
   padding: 0 6%;
   background: #fff;
   position: fixed;
-  z-index: 4;
+  z-index: 5;
   height: 80px;
   align-items: center;
 }
@@ -160,7 +160,7 @@
 }
 
 .cart-popup {
-  z-index: 4;
+  z-index: 1000;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -169,4 +169,15 @@
   height: 103vh;
   width: 100%;
   background: rgba(57, 55, 72, 0.22);
+}
+
+.cart-backdrop {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0);
+  display: flex;
+  justify-content: flex-end;
+  z-index: 999;
 }
