--- a/src/components/ProductInfo/ProductInfo.scss
+++ b/src/components/ProductInfo/ProductInfo.scss
@@ -47,12 +47,11 @@
 .item-sizes {
   display: flex;
   gap: 5px;
-  width: 175px;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .size {
-  padding: 7px 0;
+  padding: 7px 10px;
   color: #1d1f22;
   text-align: center;
   font-family: "Source Sans 3", sans-serif;
@@ -60,8 +59,8 @@
   font-style: normal;
   font-weight: bold;
   line-height: 160%;
+  width: 100%;
   border: 2px solid #000;
-  width: 35px;
   text-align: center;
   cursor: pointer;
 }
